retrieved-preprod/objects/Initial_Assessment__c/fields/Activities_Away_from_Home__c.field-meta.xml
<CustomField>
    <fullName>Activities_Away_from_Home__c</fullName>
    <label>Activities Away from Home</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>