retrieved-preprod/objects/Initial_Assessment__c/fields/Activities_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Activities_Permitted__c</fullName>
    <label>Activities Permitted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete Bedrest</fullName>
            </value>
            <value>
                <fullName>Bedrest BRP</fullName>
            </value>
            <value>
                <fullName>Up as Tolerated</fullName>
            </value>
            <value>
                <fullName>Transfer Bed/Chair</fullName>
            </value>
            <value>
                <fullName>Exercises Prescribed</fullName>
            </value>
            <value>
                <fullName>Partial Weight Bearing</fullName>
            </value>
            <value>
                <fullName>Independent at Home</fullName>
            </value>
            <value>
                <fullName>Crutches</fullName>
            </value>
            <value>
                <fullName>Cane</fullName>
            </value>
            <value>
                <fullName>Wheelchair</fullName>
            </value>
            <value>
                <fullName>Walker</fullName>
            </value>
            <value>
                <fullName>No Restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>