retrieved-preprod/objects/Initial_Assessment__c/fields/Afternoon__c.field-meta.xml
<CustomField>
    <fullName>Afternoon__c</fullName>
    <label>Afternoon</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>