retrieved-preprod/objects/Initial_Assessment__c/fields/Aids_for_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Aids_for_Transfers__c</fullName>
    <label>Aids</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gait Belt</fullName>
            </value>
            <value>
                <fullName>Hoyer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>