retrieved-preprod/objects/Initial_Assessment__c/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <label>Allergies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACE Inhibitors</fullName>
            </value>
            <value>
                <fullName>Aciphex</fullName>
            </value>
            <value>
                <fullName>Actonel</fullName>
            </value>
            <value>
                <fullName>Actos</fullName>
            </value>
            <value>
                <fullName>Adhesive Tape</fullName>
            </value>
            <value>
                <fullName>Albuterol</fullName>
            </value>
            <value>
                <fullName>Allegra</fullName>
            </value>
            <value>
                <fullName>Allopurinol</fullName>
            </value>
            <value>
                <fullName>Almonds</fullName>
            </value>
            <value>
                <fullName>Amantadine</fullName>
            </value>
            <value>
                <fullName>Amides</fullName>
            </value>
            <value>
                <fullName>Amiodarone</fullName>
            </value>
            <value>
                <fullName>Amoxicillin</fullName>
            </value>
            <value>
                <fullName>Ampicillin</fullName>
            </value>
            <value>
                <fullName>Anectine</fullName>
            </value>
            <value>
                <fullName>Antiemtics</fullName>
            </value>
            <value>
                <fullName>Antihistamines</fullName>
            </value>
            <value>
                <fullName>Aricept</fullName>
            </value>
            <value>
                <fullName>Aspartame</fullName>
            </value>
            <value>
                <fullName>Aspirin (ASA or Salicylates)</fullName>
            </value>
            <value>
                <fullName>Atenolol</fullName>
            </value>
            <value>
                <fullName>Augmentin</fullName>
            </value>
            <value>
                <fullName>Bacitracin</fullName>
            </value>
            <value>
                <fullName>Bactrim</fullName>
            </value>
            <value>
                <fullName>Bananas</fullName>
            </value>
            <value>
                <fullName>Barbituates</fullName>
            </value>
            <value>
                <fullName>Bee Stings</fullName>
            </value>
            <value>
                <fullName>Benadryl</fullName>
            </value>
            <value>
                <fullName>Beta-Adrenergic Blockers</fullName>
            </value>
            <value>
                <fullName>Bisphosphonates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>