retrieved-preprod/objects/Initial_Assessment__c/fields/Appetite__c.field-meta.xml
<CustomField>
    <fullName>Appetite__c</fullName>
    <label>Appetite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>