retrieved-preprod/objects/Initial_Assessment__c/fields/Assistance__c.field-meta.xml
<CustomField>
    <fullName>Assistance__c</fullName>
    <label>Assistance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Feeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>