retrieved-preprod/objects/Initial_Assessment__c/fields/Can_client_be_left_alone__c.field-meta.xml
<CustomField>
    <fullName>Can_client_be_left_alone__c</fullName>
    <label>Can client be left alone?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>