retrieved-preprod/objects/Initial_Assessment__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aide&apos;s Car</fullName>
            </value>
            <value>
                <fullName>Client&apos;s Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>