retrieved-preprod/objects/Initial_Assessment__c/fields/Dementia__c.field-meta.xml
<CustomField>
    <fullName>Dementia__c</fullName>
    <label>Dementia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Forgetful</fullName>
            </value>
            <value>
                <fullName>Mild</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>