retrieved-preprod/objects/Initial_Assessment__c/fields/Favorite_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Lunch__c</fullName>
    <label>Favorite Lunch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>