retrieved-preprod/objects/Initial_Assessment__c/fields/Functional_Limitations__c.field-meta.xml
<CustomField>
    <fullName>Functional_Limitations__c</fullName>
    <label>Functional Limitations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amputation</fullName>
            </value>
            <value>
                <fullName>Bowel/Bladder (Incontinence)</fullName>
            </value>
            <value>
                <fullName>Contracture</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Paralysis</fullName>
            </value>
            <value>
                <fullName>Endurance</fullName>
            </value>
            <value>
                <fullName>Ambulation</fullName>
            </value>
            <value>
                <fullName>Speech</fullName>
            </value>
            <value>
                <fullName>Legally Blind</fullName>
            </value>
            <value>
                <fullName>Dyspnea with Minimal Exertion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>