retrieved-preprod/objects/Initial_Assessment__c/fields/Has_safety_assessment_been_done__c.field-meta.xml
<CustomField>
    <fullName>Has_safety_assessment_been_done__c</fullName>
    <label>Has safety assessment been done?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>