retrieved-preprod/objects/Initial_Assessment__c/fields/HavePet_PetCare__c.field-meta.xml
<CustomField>
    <fullName>HavePet_PetCare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Pet?</label>
    <type>Checkbox</type>
</CustomField>