retrieved-preprod/objects/Initial_Assessment__c/fields/Hygiene__c.field-meta.xml
<CustomField>
    <fullName>Hygiene__c</fullName>
    <label>Hygiene</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dental/Dentures Care</fullName>
            </value>
            <value>
                <fullName>Skin Care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>