retrieved-preprod/objects/Initial_Assessment__c/fields/Incontinence__c.field-meta.xml
<CustomField>
    <fullName>Incontinence__c</fullName>
    <label>Incontinence</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urination</fullName>
            </value>
            <value>
                <fullName>Bowels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>