retrieved-preprod/objects/Initial_Assessment__c/fields/Interested_in_Lifeline__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Lifeline__c</fullName>
    <label>Interested in Lifeline?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>