retrieved-preprod/objects/Initial_Assessment__c/fields/Lethargy__c.field-meta.xml
<CustomField>
    <fullName>Lethargy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lethargy</label>
    <type>Checkbox</type>
</CustomField>