retrieved-preprod/objects/Initial_Assessment__c/fields/Life_Activities_for_ADLs__c.field-meta.xml
<CustomField>
    <fullName>Life_Activities_for_ADLs__c</fullName>
    <label>Life Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambulation &amp; Transfer</fullName>
            </value>
            <value>
                <fullName>Bathing</fullName>
            </value>
            <value>
                <fullName>Continence</fullName>
            </value>
            <value>
                <fullName>Dressing &amp; Grooming</fullName>
            </value>
            <value>
                <fullName>Eating</fullName>
            </value>
            <value>
                <fullName>Toileting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>