retrieved-preprod/objects/Initial_Assessment__c/fields/Life_Activities_for_IADLs__c.field-meta.xml
<CustomField>
    <fullName>Life_Activities_for_IADLs__c</fullName>
    <label>Life Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Device Request</fullName>
            </value>
            <value>
                <fullName>Housework</fullName>
            </value>
            <value>
                <fullName>Laundry</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Money and Bills</fullName>
            </value>
            <value>
                <fullName>Observation</fullName>
            </value>
            <value>
                <fullName>Pet Care</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Preparing Meals</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Traveling</fullName>
            </value>
            <value>
                <fullName>Using Telephone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>