retrieved-preprod/objects/Initial_Assessment__c/fields/Lunch_Time__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Time__c</fullName>
    <label>Lunch Time</label>
    <type>Time</type>
</CustomField>