retrieved-preprod/objects/Initial_Assessment__c/fields/MonitoringDeviceName__c.field-meta.xml
<CustomField>
    <fullName>MonitoringDeviceName__c</fullName>
    <label>Monitoring Device Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>