retrieved-preprod/objects/Initial_Assessment__c/fields/Morning__c.field-meta.xml
<CustomField>
    <fullName>Morning__c</fullName>
    <label>Morning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>