retrieved-preprod/objects/Initial_Assessment__c/fields/Naps_during_day__c.field-meta.xml
<CustomField>
    <fullName>Naps_during_day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Naps during day</label>
    <type>Checkbox</type>
</CustomField>