retrieved-preprod/objects/Initial_Assessment__c/fields/Notes_for_Bathing_Grooming_Dressing__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Bathing_Grooming_Dressing__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>