retrieved-preprod/objects/Initial_Assessment__c/fields/Other_Details_for_Equipment_Environment__c.field-meta.xml
<CustomField>
    <fullName>Other_Details_for_Equipment_Environment__c</fullName>
    <label>Other Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>