retrieved-preprod/objects/Initial_Assessment__c/fields/Other_for_Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Other_for_Medical_Conditions__c</fullName>
    <label>Other</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Smoker</fullName>
            </value>
            <value>
                <fullName>Sensitive to Smell</fullName>
            </value>
            <value>
                <fullName>On Oxygen</fullName>
            </value>
            <value>
                <fullName>Colostomy Bag</fullName>
            </value>
            <value>
                <fullName>Feeding Tube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>