retrieved-preprod/objects/Initial_Assessment__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proceed as Active Client</fullName>
            </value>
            <value>
                <fullName>Remain as Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>