retrieved-preprod/objects/Initial_Assessment__c/fields/Past_Current_Substance_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Past_Current_Substance_Abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past/Current Substance Abuse</label>
    <type>Checkbox</type>
</CustomField>