retrieved-preprod/objects/Initial_Assessment__c/fields/Past_Profession__c.field-meta.xml
<CustomField>
    <fullName>Past_Profession__c</fullName>
    <label>Past Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>