retrieved-preprod/objects/Initial_Assessment__c/fields/Pet_Care__c.field-meta.xml
<CustomField>
    <fullName>Pet_Care__c</fullName>
    <label>Pet Care</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Cat Litter Box</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Feeding</fullName>
            </value>
            <value>
                <fullName>Walk Dog</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>