retrieved-preprod/objects/Initial_Assessment__c/fields/Preparing_Meals_Active__c.field-meta.xml
<CustomField>
    <fullName>Preparing_Meals_Active__c</fullName>
    <label>Preparing Meals - Active?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>