retrieved-preprod/objects/Initial_Assessment__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assessments</relationshipLabel>
    <relationshipName>Initial_Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>