retrieved-preprod/objects/Initial_Assessment__c/fields/Shopping_By__c.field-meta.xml
<CustomField>
    <fullName>Shopping_By__c</fullName>
    <label>Shopping By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>