retrieved-preprod/objects/Initial_Assessment__c/fields/Sleep_Patterns__c.field-meta.xml
<CustomField>
    <fullName>Sleep_Patterns__c</fullName>
    <label>Sleep Patterns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sleeps through night</fullName>
            </value>
            <value>
                <fullName>Frequently awakens</fullName>
            </value>
            <value>
                <fullName>Gets up for toileting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>