retrieved-preprod/objects/Initial_Assessment__c/fields/SocialFamilyInformation__c.field-meta.xml
<CustomField>
    <fullName>SocialFamilyInformation__c</fullName>
    <label>Social/Family Information</label>
    <type>TextArea</type>
</CustomField>